--- a/Assignment2/app/src/main/res/values/strings.xml
+++ b/Assignment2/app/src/main/res/values/strings.xml
@@ -1,4 +1,26 @@
 <resources>
+    <string-array name="tip_selection">
+        <item>5</item>
+        <item>10</item>
+        <item>15</item>
+        <item>20</item>
+        <item>25</item>
+        <item>30</item>
+        <item>35</item>
+        <item>40</item>
+        <item>45</item>
+        <item>50</item>
+        <item>55</item>
+        <item>60</item>
+        <item>65</item>
+        <item>70</item>
+        <item>75</item>
+        <item>80</item>
+        <item>85</item>
+        <item>90</item>
+        <item>95</item>
+        <item>100</item>
+    </string-array>
     <string name="app_name">Tip \'n Split</string>
     <string name="labelBillAmt">Amount due</string>
     <string name="labelTipPercent">Percent to tip</string>
