Wrote four espresso tests

--- a/Assignment2/app/src/main/res/values/strings.xml
+++ b/Assignment2/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string-array name="tip_selection">
+        <item>0</item>
         <item>5</item>
         <item>10</item>
         <item>15</item>
