--- a/Assignment3/app/src/main/res/values/strings.xml
+++ b/Assignment3/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">YelpIt</string>
+    <string name="error_fetch_businesses">Check your internet connection</string>
+    <string name="heading">Businesses in Monmouth</string>
+    <string name="subheading">and surrounding areas</string>
 </resources>
