--- a/Assignment3/app/src/main/res/values/strings.xml
+++ b/Assignment3/app/src/main/res/values/strings.xml
@@ -3,4 +3,13 @@
     <string name="error_fetch_businesses">Check your internet connection</string>
     <string name="heading">Businesses in Monmouth</string>
     <string name="subheading">and surrounding areas</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="first_name">First Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="login_title">Login</string>
+    <string name="create_act">Create Account</string>
+    <string name="send_password_reset_email">Send Password Reset Email</string>
+    <string name="etEmail">E-mail address</string>
+    <string name="etPassword">Password</string>
 </resources>
