--- a/Assignment3/app/src/main/res/values/strings.xml
+++ b/Assignment3/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="first_name">First Name</string>
     <string name="last_name">Last Name</string>
     <string name="login_title">Login</string>
+    <string name="logout_title">Logout</string>
     <string name="create_act">Create Account</string>
     <string name="send_password_reset_email">Send Password Reset Email</string>
     <string name="etEmail">E-mail address</string>
