--- a/ListIt/app/src/main/res/values/strings.xml
+++ b/ListIt/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ListIt</string>
+    <string name="error_fetch_listings">Limited or no network availability. Please check your connection.</string>
 </resources>
