--- a/ListIt/app/src/main/res/values/strings.xml
+++ b/ListIt/app/src/main/res/values/strings.xml
@@ -61,9 +61,13 @@
     <string name="price_hint">i.e. $998</string>
     <string name="price_title">Price</string>
     <string name="title_hint">i.e. Samsung Galaxy S10</string>
+    <string name="location_title">Location</string>
+    <string name="city_hint">Mobile</string>
     <string name="listing_title">Listing title</string>
     <string name="submit">Create listing</string>
     <string name="heading">Items for sale</string>
     <string name="subheading">Have a look around</string>
     <string name="location">Location</string>
+    <string name="my_app_id">listit-ipmxv</string>
+    <string name="mongo_write_success">Write to MongoDB successful</string>
 </resources>
